fixed big space on mobile and tablet

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3574,7 +3574,7 @@ body.is-preload #intro:not(.hidden)+#header+#nav {
 
 	#intro {
 		padding: 4rem 4rem 2rem 4rem;
-		min-height: 90vh;
+		min-height: 55vh;
 	}
 
 	#intro p br {
@@ -3591,7 +3591,7 @@ body.is-preload #intro:not(.hidden)+#header+#nav {
 
 	#intro {
 		padding: 3rem 2rem 1rem 2rem;
-		min-height: 80vh;
+		min-height: 60vh;
 	}
 
 	#intro h1 {
